# cumulus-site

./: .gitignore  .pre-commit-config.yaml  .prettierrc  README.md  build.sh  db.sqlite3  pyproject.toml  render.yaml  requirements.txt
assets/: package-lock.json  package.json  tailwind.config.js
blog/: admin.py  models.py  sitemaps.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/: detail.html  index.html
config/: settings.py  urls.py
core/: urls.py  views.py
core/static/: robots.txt
core/static/css/: styles.css
core/templates/: base.html  home.html
core/templates/includes/: footer.html  navbar.html
