[project]
name = "cumulus-site"
version = "0.1.0"
description = ""
authors = [
    {name = "Etty Sekhon",email = "etty.sekhon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "python-decouple (>=3.8,<4.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "markdown (>=3.8,<4.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "dj-database-url (>=2.3.0,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cumulus-site"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
ruff = "^0.11.5"
pre-commit = "^4.2.0"

[tool.isort]
profile = "black"

[tool.poetry.plugins."poetry.application.plugin"]
"export" = "poetry_plugin_export.plugin:ExportPlugin"

